--- a/src/data/locales/ru_RU/strings.json
+++ b/src/data/locales/ru_RU/strings.json
@@ -296,7 +296,7 @@
     "terminologydesc": "Администратор сервера \n Любой пользователь, у которого есть разрешение, возможность или доступ для добавления или настройки нашего бота на сервере. \nУчастник Сервера \n Любой пользователь, который является участником сервера, на котором присутствует Helia.",
     "datacollecttitle": "Данные, собираемые для возможности настройки бота на сервере",
     "datacollectdesc": "Следующее может быть собрано, если вы используете команды администратора сервера для настройки бота так, как считаете нужным.",
-    "dctitlecont": "⠀",
+    "dctitlecont": ":arrow_forward: ",
     "datacollectcont": "Настройки сервера (guild_id, channel_id, role_id, локализация бота, настраиваемые префиксы) - используются для настройки каналов приветствия и прощания, префикса вашего сервера и настройки языка, на котором говорит бот.",
     "loggingtitle": "Логирование",
     "loggingdesc": "Мы записываем о вас следующее: \n Команды, которые вы используете на своем сервере (это означает, что имя сервера и псевдоним, вызывающий команду, сохраняются - они временно хранятся в консоли бота и не будут видны нам через несколько часов)",
