--- a/src/data/locales/bel_BY/strings.json
+++ b/src/data/locales/bel_BY/strings.json
@@ -22,6 +22,7 @@
     "aboutthankstext": "NigamanRPG#6937 (цяпер аддаленая уліковы запіс) за код konsolebot на https://computerteam.tk:4600/, Plastik#5004 за код каманды setname і іншыя праекты з адкрытым зыходным кодам для фрагментаў кода",
     "abouthosting": "Хостынг",
     "abouthostingvalue": "<:vps:854357778683396096> Danbot Hosting",
+    "otherinfoabout": "Іншая інфармацыя",
     "botownererrorembedtitle": "Памылка",
     "botownererrorembeddesc": "Ты павінен быць``Уладальнікам бота`` каб гэта рабіць.",
     "announcestitle": "Глабальная сістэма анонсаў 🌐",
