--- a/src/data/locales/en_EN/strings.json
+++ b/src/data/locales/en_EN/strings.json
@@ -22,6 +22,7 @@
     "aboutthankstext": "NigamanRPG#6937(Now deleted account) for konsolebot code on https://computerteam.tk:4600/ , Plastik#5004 for setname command code , and other opensource projects for snippets of code",
     "abouthosting": "Hosting",
     "abouthostingvalue": "Repl.it",
+    "otherinfoabout": "Other information",
     "botownererrorembedtitle": "Error",
     "botownererrorembeddesc": "You need the ``Bot Owner`` permission to do this.",
     "announcestitle": "Global Announcement System 🌐",
