--- a/src/data/locales/ua_UA/strings.json
+++ b/src/data/locales/ua_UA/strings.json
@@ -22,6 +22,7 @@
     "aboutthankstext": "NigamanRPG # 6937 (тепер віддалений обліковий запис) для коду konsolebot за адресою https://computerteam.tk:4600/, Plastik # 5004 для коду команди setname та інших проектів з відкритим кодом для фрагментів коду",
     "abouthosting": "Хостинг",
     "abouthostingvalue": "<:vps:854357778683396096> Danbot Hosting",
+    "otherinfoabout": "Інша інформація",
     "botownererrorembedtitle": "Помилка",
     "botownererrorembeddesc": "Для цього потрібно бути `` власником бота ''.",
     "announcestitle": "Глобальна система оголошень 🌐",
