--- a/src/data/locales/zh_CN/strings.json
+++ b/src/data/locales/zh_CN/strings.json
@@ -22,6 +22,7 @@
     "aboutthankstext": "NigamanRPG#6937(现在删除帐户)，在 https://computeteam.tk:4600/ , Plastik#5004 上为 setname 命令代码 , 和其他开源 项目的 代码片段",
     "abouthosting": "主机",
     "abouthostingvalue": "<:vps:854357778683396096> Danbot Hosting",
+    "otherinfoabout": "其他资料",
     "botownererrorembedtitle": "错误",
     "botownererrorembeddesc": "你需要 ``Bot Owner`` 权限才能做到这一点。",
     "announcestitle": "全局公告系统 🌐",
