--- a/src/data/locales/ru_RU/strings.json
+++ b/src/data/locales/ru_RU/strings.json
@@ -22,6 +22,7 @@
     "aboutthankstext": "NigamanRPG # 6937 (теперь удаленная учетная запись) за код konsolebot на https://computerteam.tk:4600/, Plastik # 5004 за код команды setname и другие проекты с открытым исходным кодом для фрагментов кода",
     "abouthosting": "Хостинг",
     "abouthostingvalue": "<:vps:854357778683396096> Danbot Hosting",
+    "otherinfoabout": "Другая информация",
     "botownererrorembedtitle": "Ошибка",
     "botownererrorembeddesc": "Ты должен быть ``Владельцем бота`` чтобы это делать.",
     "announcestitle": "Глобальная система анонсов 🌐",
